[gd_scene load_steps=26 format=2]

[ext_resource path="res://act2/maze/maze.png" type="Texture" id=1]
[ext_resource path="res://smolboi.tscn" type="PackedScene" id=2]
[ext_resource path="res://act2/maze/ads.gd" type="Script" id=3]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=4]
[ext_resource path="res://act2/maze/Path2D.gd" type="Script" id=6]
[ext_resource path="res://sprites/act 2 setting/scene 4/mob1.png" type="Texture" id=7]
[ext_resource path="res://sprites/act 2 setting/scene 4/mob2.png" type="Texture" id=8]
[ext_resource path="res://act2/maze/Area2D.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.3373, 1173.04 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 844.714, 68.7407 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 316.718, 22.2971 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 113.495, 20.0971 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22.7342, 125.242 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 578.564, 25.8113 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32.2297, 198.217 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16.6418, 347.526 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 328.014, 32.002 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 225.172, 21.2023 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 21.6782, 213.956 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 686.527, 31.7754 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 435.435, 30.3228 )

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1851.67, 2711.32, 0, 0, 0, 0, 1771.84, 1282.28, 0, 0, 0, 0, 1891.59, -106.849 )
}

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 2799.39, 232.201 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 561.401, 558.313 )

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1946.12, 1079.52 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 6.46976, 1049.44 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3819.28, 1049.44 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 893.231, -17.1776 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2983.16, -22.9034 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2948.81, 2135.74 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 744.358, 2152.92 )
shape = SubResource( 2 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 409.834, 266.392 )
shape = SubResource( 3 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1093.72, 276.845 )
shape = SubResource( 4 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 861.949, 493.901 )
shape = SubResource( 4 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1327.08, 493.901 )
shape = SubResource( 4 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 176.548, 1651.14 )
shape = SubResource( 4 )

[node name="CollisionShape2D47" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 394.561, 1189.84 )
shape = SubResource( 4 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 387.87, 1872.53 )
shape = SubResource( 4 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1099.91, 1884.63 )
shape = SubResource( 4 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1568.26, 1882.9 )
shape = SubResource( 4 )

[node name="CollisionShape2D69" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2013.65, 1416.96 )
shape = SubResource( 4 )

[node name="CollisionShape2D70" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2703.42, 1186.27 )
shape = SubResource( 4 )

[node name="CollisionShape2D71" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3176.21, 1190.84 )
shape = SubResource( 4 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2021.07, 1886.35 )
shape = SubResource( 4 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2468.68, 1421.46 )
shape = SubResource( 4 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2937.04, 1653.04 )
shape = SubResource( 4 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2925.94, 970.486 )
shape = SubResource( 4 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3394.85, 498.802 )
shape = SubResource( 4 )

[node name="CollisionShape2D73" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3350.05, 727.52 )
shape = SubResource( 4 )

[node name="CollisionShape2D74" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3404.28, 727.52 )
shape = SubResource( 4 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 512.24, 396.806 )
shape = SubResource( 5 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 283.173, 605.662 )
shape = SubResource( 5 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1668.14, 156.482 )
shape = SubResource( 5 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1663.74, 603.46 )
shape = SubResource( 5 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3509.41, 155.817 )
shape = SubResource( 5 )

[node name="CollisionShape2D25" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3509.41, 1303.78 )
shape = SubResource( 5 )

[node name="CollisionShape2D26" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3505.93, 1769.92 )
shape = SubResource( 5 )

[node name="CollisionShape2D27" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1891.83, 1512.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D28" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 740.391, 1088.1 )
shape = SubResource( 5 )

[node name="CollisionShape2D29" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1203.05, 1049.83 )
shape = SubResource( 5 )

[node name="CollisionShape2D30" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 288.165, 1046.35 )
shape = SubResource( 5 )

[node name="CollisionShape2D31" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 281.207, 1519.45 )
shape = SubResource( 5 )

[node name="CollisionShape2D32" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1196.1, 1756 )
shape = SubResource( 5 )

[node name="CollisionShape2D33" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2585.48, 1072.1 )
shape = SubResource( 5 )

[node name="CollisionShape2D34" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3277.73, 1068.62 )
shape = SubResource( 5 )

[node name="CollisionShape2D35" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3058.57, 1284.3 )
shape = SubResource( 5 )

[node name="CollisionShape2D36" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 856.517, 727.359 )
shape = SubResource( 6 )

[node name="CollisionShape2D37" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 966.669, 264.59 )
shape = SubResource( 7 )

[node name="CollisionShape2D38" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1434.38, 611.154 )
shape = SubResource( 8 )

[node name="CollisionShape2D39" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1663.78, 1523.15 )
shape = SubResource( 8 )

[node name="CollisionShape2D40" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1663.78, 1290.95 )
shape = SubResource( 8 )

[node name="CollisionShape2D41" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2130.96, 1774.93 )
shape = SubResource( 8 )

[node name="CollisionShape2D42" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2819.16, 1766.53 )
shape = SubResource( 8 )

[node name="CollisionShape2D43" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2136.56, 345.389 )
shape = SubResource( 8 )

[node name="CollisionShape2D44" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2136.56, 619.547 )
shape = SubResource( 8 )

[node name="CollisionShape2D45" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2360.36, 1061.56 )
shape = SubResource( 8 )

[node name="CollisionShape2D46" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 501.348, 1528.43 )
shape = SubResource( 8 )

[node name="CollisionShape2D48" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 845.685, 954.71 )
shape = SubResource( 9 )

[node name="CollisionShape2D49" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1084.36, 1656.01 )
shape = SubResource( 9 )

[node name="CollisionShape2D50" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3584.75, 979.553 )
shape = SubResource( 9 )

[node name="CollisionShape2D51" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1673.69, 279.356 )
shape = SubResource( 10 )

[node name="CollisionShape2D52" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3278.38, 1405.4 )
shape = SubResource( 10 )

[node name="CollisionShape2D53" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3274.94, 1890.93 )
shape = SubResource( 10 )

[node name="CollisionShape2D54" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2575.9, 1887.49 )
shape = SubResource( 10 )

[node name="CollisionShape2D55" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2369.29, 1656.77 )
shape = SubResource( 10 )

[node name="CollisionShape2D56" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2107.58, 1185.01 )
shape = SubResource( 10 )

[node name="CollisionShape2D57" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1659.92, 964.621 )
shape = SubResource( 10 )

[node name="CollisionShape2D58" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1198.48, 1202.23 )
shape = SubResource( 10 )

[node name="CollisionShape2D59" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1415.43, 1426.06 )
shape = SubResource( 10 )

[node name="CollisionShape2D60" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 747.379, 1422.61 )
shape = SubResource( 10 )

[node name="CollisionShape2D61" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 969.915, 1423.93 )
shape = SubResource( 11 )

[node name="CollisionShape2D62" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 741.292, 1853.46 )
shape = SubResource( 11 )

[node name="CollisionShape2D63" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1892.84, 964.188 )
shape = SubResource( 11 )

[node name="CollisionShape2D64" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3282.07, 480.62 )
shape = SubResource( 11 )

[node name="CollisionShape2D65" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2814.9, 964.188 )
shape = SubResource( 11 )

[node name="CollisionShape2D66" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3277.98, 1648.56 )
shape = SubResource( 11 )

[node name="CollisionShape2D67" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2341.35, 500.098 )
shape = SubResource( 12 )

[node name="CollisionShape2D68" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2819.58, 273.369 )
shape = SubResource( 13 )

[node name="CollisionShape2D72" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2798.36, 728.447 )
shape = SubResource( 13 )

[node name="smolboi" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1901.91, 1085.89 )
scale = Vector2( 0.514751, 1.04109 )
texture = ExtResource( 4 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 14 )
script = ExtResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1834.94, 2411.83 )
rotation = -6.28319
offset = 300.0
rotate = false

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D"]
position = Vector2( -1998.29, -2058.15 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( 941.495, 2214.79 )
scale = Vector2( 0.527589, 0.448462 )
frames = SubResource( 15 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( 1585.05, 2283.05 )
scale = Vector2( 0.527589, 0.448462 )
frames = SubResource( 15 )
flip_h = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( 3232.95, 2283.05 )
scale = Vector2( 0.527589, 0.448462 )
frames = SubResource( 15 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( 3754.32, 2265.38 )
scale = Vector2( 0.527589, 0.448462 )
frames = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Area2D"]
position = Vector2( 2183.97, 2218.27 )
shape = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1957.35, -543.987 )
shape = SubResource( 17 )

[connection signal="body_entered" from="Path2D/PathFollow2D/Area2D" to="Path2D/PathFollow2D/Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
